--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,13 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+
+        <ul >
+          <li><a href={{ "/test1.html" | relative_url }}">test1</a></li>
+          <li><a href={{ "/test2.html" | relative_url }}">test2</a></li>
+          </ul >
+
+
       </header>
       <section>
 
