--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,9 @@
         {% endif %}
 
         <ul >
-          <li><a href={{ "/test1.html" | relative_url }}">test1</a></li>
-          <li><a href={{ "/test2.html" | relative_url }}">test2</a></li>
+          <li><a href="./test1.html" ">test1</a></li>
+          <li><a href="./test2.html" ">test2</a></li>
+
           </ul >
 
 
